services/bwdserver-deployment-darklang/bwdserver-deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bwdserver-deployment
  namespace: darklang
  annotations:
    kubernetes.io/change-cause: "{ARG:CHANGE_CAUSE}"

spec:
  revisionHistoryLimit: 10
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0

  selector:
    matchLabels:
      app: bwdserver-app
  template:
    metadata:
      labels:
        app: bwdserver-app
        dark-executor: "true"
      annotations:
        # We use EmptyDir to allow read-only pods, but they need this annotation to scale down
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      # ---------------------
      # Pod-level security
      # ---------------------
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true # https://docs.bridgecrew.io/docs/bc_k8s_22
        runAsUser: 25432 # https://stackoverflow.com/questions/49720308
      hostPID: false
      automountServiceAccountToken: false # https://docs.bridgecrew.io/docs/bc_k8s_35

      ###################
      # Container definitions
      ###################
      containers:

        ###################
        # Main container
        ###################
        - name: bwdserver-ctr
          image: "gcr.io/balmy-ground-195100/gcp-fsharp-bwdserver:{IMAGEID:gcp-fsharp-bwdserver}"
          ports:
            # Name length limit is 15 chars.
            - name: bwdsvr-ctr-port
              containerPort: 11001

          # ---------------------
          # Security - https://docs.bridgecrew.io/docs
          # ---------------------
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW # https://docs.bridgecrew.io/docs/bc_k8s_27
                - ALL # https://docs.bridgecrew.io/docs/bc_k8s_34
            privileged: false
            readOnlyRootFilesystem: true # https://docs.bridgecrew.io/docs/bc_k8s_21
            runAsNonRoot: true # https://docs.bridgecrew.io/docs/bc_k8s_22
            runAsUser: 1000 # https://stackoverflow.com/questions/49720308
          volumeMounts:
            - mountPath: /home/dark/gcp-rundir # security
              name: rundir

          # ---------------------
          # Resource limits
          # ---------------------
          resources:
            requests:
              memory: "3000Mi"
              cpu: "2"
            limits:
              memory: "6000Mi"

          # ---------------------
          # Lifecycles probes
          # ---------------------
          # lifecycle:
          #   preStop:
          #     We implement the SIGTERM handler instead (even if we used preStop we'd
          #     still need to check how SIGTERM works so may as well simplify it to one
          #     concept)
          startupProbe: # has it started? Allows other probes
            httpGet:
              path: /k8s/startupProbe
              port: 11002
            failureThreshold: 24 # kill container after 2 minutes (24x5s checks)
            timeoutSeconds: 10
            periodSeconds: 5
          readinessProbe: # can it serve http requests?
            httpGet:
              path: /k8s/readinessProbe
              port: 11002
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 3
          livenessProbe: # is it still alive?
            httpGet:
              path: /k8s/livenessProbe
              port: 11002
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3 # kill container after 30 seconds (3x10s checks)

          # ---------------------
          # Environment
          # ---------------------
        - name: legacy-ctr
          image: "gcr.io/balmy-ground-195100/legacyserver:{IMAGEID:legacyserver}"
          ports:
            - name: legacy-port
              containerPort: 5000

          # ---------------------
          # Security - https://docs.bridgecrew.io/docs
          # ---------------------
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW # https://docs.bridgecrew.io/docs/bc_k8s_27
            privileged: false
            # this is expected to run as root. We're getting rid of the container
            # soon so not worth fixing.
            runAsNonRoot: false
            runAsUser: 0

          # ---------------------
          # Resource limits
          # ---------------------
          # Resource limits + requests are intentionally the same, to ensure
          # this pod is a 'Guaranteed' pod, ref:
          # https://medium.com/google-cloud/quality-of-service-class-qos-in-kubernetes-bb76a89eb2c6
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "1000Mi"

          # ---------------------
          # Lifecycle probes
          # ---------------------
          lifecycle:
            preStop:
              httpGet:
                # ???? https://github.com/kubernetes/kubernetes/issues/56770
                path: /k8s/pkill
                port: legacy-port
          readinessProbe:
            httpGet:
              path: /k8s/readinessProbe
              port: legacy-port
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /k8s/livenessProbe
              port: legacy-port
            # Giving 2 minutes grace here, there's an outstanding k8s issue
            # preventing you from specifying "start checking liveness after an
            # ok from readiness", which is what you'd expect.
            # https://github.com/kubernetes/kubernetes/issues/27114
            initialDelaySeconds: 120
            periodSeconds: 10 # every 10 seconds
            timeoutSeconds: 10 # time out after 10 seconds
            failureThreshold: 3 # kill container after 3 successive time outs

          # ---------------------
          # Environment
          # ---------------------
        - name: cloudsql-proxy
          image: "gcr.io/cloudsql-docker/gce-proxy:1.28.0@sha256:69880f1a8c3ac450f9cb083b91adb2d881ef71af3928ebf6b88b8933314f118a"
          command:
            - "/cloud_sql_proxy"
            - "-instances={BUILTIN:CLOUDSQL_INSTANCE_NAME}=tcp:5432"
            - "-credential_file=/secrets/cloudsql/credentials.json"
            - "-term_timeout=30s"
            - "-structured_logs"
            - "-verbose"
            - "-use_http_health_check"
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true

          # --------------------
          # Security
          # --------------------
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW # https://docs.bridgecrew.io/docs/bc_k8s_27
                - ALL # https://docs.bridgecrew.io/docs/bc_k8s_34
            privileged: false
            readOnlyRootFilesystem: true # https://docs.bridgecrew.io/docs/bc_k8s_21
            runAsNonRoot: true # https://docs.bridgecrew.io/docs/bc_k8s_22
            runAsUser: 25432 # https://stackoverflow.com/questions/49720308

          # ---------------------
          # Resource limits
          # ---------------------
          resources:
            requests:
              memory: "500Mi"
              cpu: "125m"
            limits:
              memory: "500Mi"

          # ---------------------
          # Lifecycle probes
          # ---------------------
          # from https://github.com/GoogleCloudPlatform/cloudsql-proxy/blob/9e4bf2c689eaa117e0f89c7ac5d181bfcc03a849/examples/k8s-health-check/proxy_with_http_health_check.yaml#L91
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8090
            initialDelaySeconds: 0
            periodSeconds: 60
            timeoutSeconds: 30
            # If periodSeconds = 60, 5 tries will result in five minutes of
            # checks. The proxy starts to refresh a certificate five minutes
            # before its expiration. If those five minutes lapse without a
            # successful refresh, the liveness probe will fail and the pod will be
            # restarted.
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8090
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 1
          startupProbe:
            httpGet:
              path: /startup
              port: 8090
            periodSeconds: 1
            timeoutSeconds: 5
            failureThreshold: 20


      # ---------------------
      # Pod volume definitions
      # ---------------------
      volumes:
        # Cloud sql
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials

        # Main container
        # to allow readOnlyRootFilesystem
        - name: rundir
          emptyDir: { }
