services/bwdserver-deployment-darklang/bwd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bwdserver-tls-ingress
  namespace: darklang
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: bwdserver-tls-ip
spec:
  defaultBackend:
    service:
      name: bwdserver-service
      port:
        number: 80
  tls:
    - secretName: builtwithdark.com-tls
